--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "next": "13.4.12",
     "next-auth": "^4.22.3",
     "next-connect": "^1.0.0",
