--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next-connect": "^1.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.10.1",
     "socket.io": "^4.7.1",
     "socket.io-client": "^4.7.1"
   },
