--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "5.1.1",
     "axios": "^1.4.0",
     "next": "13.4.12",
     "next-auth": "^4.22.3",
@@ -27,6 +28,7 @@
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
     "postcss": "8.4.27",
+    "prisma": "^5.1.1",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   }
