--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prisma": "npx prisma studio"
+    "prisma studio": "npx prisma studio",
+    "prisma migrate": "npx prisma migrate dev --name init"
   },
   "dependencies": {
     "@prisma/client": "5.1.1",
